<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rbei_background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/userName"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/background_light"

        android:hint="@string/Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading" />

    <TextView
        android:id="@+id/Heading"
        android:layout_width="324dp"
        android:layout_height="190dp"
        android:layout_marginBottom="36dp"
        android:paddingLeft="35sp"
        android:paddingTop="20sp"
        android:text="@string/lessons_inside"
        android:textColor="@android:color/background_light"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="355dp"
        android:layout_height="47dp"

        android:layout_marginTop="4dp"
        android:backgroundTint="@android:color/background_light"
        android:hint="@string/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="267dp"
        android:layout_height="47dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/button_round"
        android:text="@string/login"
        android:textColor="#94283c"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="273dp"
        android:layout_height="67dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="28sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="408dp"
        android:layout_height="82dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/don_t_have_and_account_sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPassword" />

    <ImageView
        android:id="@+id/login"
        android:layout_width="30dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/lock"
        android:layout_width="30dp"
        android:layout_height="55dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toStartOf="@+id/userName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:srcCompat="@drawable/lock" />

</androidx.constraintlayout.widget.ConstraintLayout>
